<resources>
    <string name="app_name">FW Java Integration</string>
    <string name="home_title">Firework Android SDK Java Examples</string>
    <string name="btn_feed_integration">Feed Integration</string>
    <string name="btn_activity">Feed in Activity</string>
    <string name="btn_fragment">Feed in Fragment</string>
    <string name="btn_recycler_view">Feed in RecyclerView</string>
    <string name="btn_add_remove">Feed Add/Remove programmatically</string>
    <string name="activity_screen_title">Activity integration</string>
    <string name="fragment_screen_title">Fragment integration</string>
    <string name="recycler_view_screen_title">Recycler view integration</string>
    <string name="add_remove_screen_title">Add/Remove integration</string>
    <string name="add_feed">Add Feed</string>
    <string name="remove_feed">Remove Feed</string>
    <string name="storyblock_title">StoryBlock Demo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="btn_storyblock">StoryBlock Demo</string>
    
    <!-- Picture-in-Picture related strings -->
    <string name="btn_picture_in_picture">Picture-in-Picture Demo</string>
    <string name="picture_in_picture_title">Picture-in-Picture Demo</string>
    <string name="source_type">Source Type:</string>
    <string name="channel_id">Channel ID:</string>
    <string name="playlist_id">Playlist ID:</string>
    <string name="enter_pip_mode">Enter PiP mode in 5 sec</string>
    <string name="close_pip_mode">Close PiP mode</string>
    <string name="close_pip_on_stop">Close PiP mode onStop</string>
    <string name="close_pip_on_destroy">Close PiP mode onDestroy</string>
    
    <!-- Share Link related strings -->
    <string name="btn_share_link">Share Link Demo</string>
    <string name="share_link_title">Share Link Demo</string>
    
    <!-- Language related strings -->
    <string name="btn_language">Language Demo</string>
    <string name="language_title">Language Demo</string>
    <string name="language">Language</string>
    
    <!-- Shopping related strings -->
    <string name="btn_shopping">Shopping Demo</string>
    <string name="shopping_title">Shopping Demo</string>
    <string name="add_to_cart">Add to cart mode</string>
    <string name="shop_now">Shop now mode</string>
    <string name="add_to_cart_mode_title">Add to Cart Mode</string>
    <string name="shop_now_mode_title">Shop Now Mode</string>
    <string name="checkout">Checkout</string>
    
    <!-- Live Stream related strings -->
    <string name="btn_live_stream">Single Host Livestream</string>
    <string name="live_stream_title">Single Host Livestream Demo</string>
    
    <!-- Feed Resource related strings -->
    <string name="btn_feed_resource">Feed Resources</string>
    <string name="feed_resource_title">Feed Resources Demo</string>
    <string name="channel_hashtag_filter_expression">Hashtag Filter Expression:</string>
    <string name="sku_ids">Sku ids:</string>
    <string name="element_id">Element ID:</string>
    <string name="categories">Categories:</string>
    <string name="discovery">Discovery</string>
    <string name="channel">Channel</string>
    <string name="playlist">Playlist</string>
    <string name="sku">Sku</string>
    <string name="single_content">Single Content</string>
    <string name="dynamic_content">Dynamic content</string>
    <string name="channel_hashtags">Channel hashtags</string>
    <string name="discovery_screen_title">FW Discovery</string>
    <string name="playlist_screen_title">FW Playlist</string>
    <string name="channel_screen_title">FW Channel</string>
    <string name="channel_hashtags_screen_title">FW Channel Hashtags</string>
    <string name="sku_screen_title">FW Sku feed</string>
    <string name="single_content_screen_title">FW Single Content</string>
    <string name="dynamic_content_screen_title">FW Dynamic Content</string>
    <string name="enter_hashtag_filter_expression">Enter hashtag filter expression</string>
    <string name="enter_sku_ids">Enter sku ids</string>
    <string name="search">Search</string>
    
    <!-- View Options related strings -->
    <string name="btn_view_options">View Options</string>
    <string name="view_options_title">View Options Demo</string>
</resources>
